deploy: dccf9351a18564a8b1183b6d3cce9149f4d5c16d

--- a/slides/03-generalities-distance-slides.html
+++ b/slides/03-generalities-distance-slides.html
@@ -210,6 +210,9 @@ Steven Golovkine
 </div>
 </div>
 </section>
+<section id="distance-euclidienne-preuve" class="slide level2">
+<h2>Distance euclidienne (preuve)</h2>
+</section>
 <section id="distance-l_q-minkowski" class="slide level2">
 <h2>Distance <span class="math inline">\(L_q\)</span> (Minkowski)</h2>
 <div class="callout callout-note no-icon callout-titled callout-style-default">
@@ -543,7 +546,7 @@ Steven Golovkine
 <li class="fragment"><p>Variables binaires → Distance de Jaccard</p></li>
 </ol>
 <div class="fragment">
-<p><strong>La suite :</strong> Comment utiliser ces distances dans des modèles ?</p>
+<p>Prochaine étape → Compromis biais/variance</p>
 
 
 </div>
