--- a/en/contents/generalities/04-bias-variance.html
+++ b/en/contents/generalities/04-bias-variance.html
@@ -1113,7 +1113,7 @@ Figure 1: The different elements of the model. The points represent the observe
 <span id="cb7-603"><a href="#cb7-603" aria-hidden="true" tabindex="-1"></a>})</span></code></pre></div>
 <button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button>
 </div>
-</details><div id="fig-plot-html" class="cell quarto-float quarto-figure quarto-figure-center anchored" data-eval="true" data-warning="false">
+</details><div id="fig-plot-html" class="cell quarto-float quarto-figure quarto-figure-center anchored" data-warning="false" data-eval="true">
 <figure class="quarto-float quarto-float-fig figure"><div aria-describedby="fig-plot-html-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="cell-output cell-output-display">
 <div id="fig-plot-html-1" class="quarto-float quarto-figure quarto-figure-center anchored">
