--- a/tp/03-generalities-tp.html
+++ b/tp/03-generalities-tp.html
@@ -566,6 +566,8 @@ window.Quarto = {
    
   <ul>
   <li><a href="#exercice-1-nettoyage-et-exploration-de-données" id="toc-exercice-1-nettoyage-et-exploration-de-données" class="nav-link active" data-scroll-target="#exercice-1-nettoyage-et-exploration-de-données">Exercice 1 : Nettoyage et exploration de données</a></li>
+  <li><a href="#exercice-2-compromis-biais-variance" id="toc-exercice-2-compromis-biais-variance" class="nav-link" data-scroll-target="#exercice-2-compromis-biais-variance">Exercice 2 : Compromis biais-variance</a></li>
+  <li><a href="#exercice-3-validation-croisée" id="toc-exercice-3-validation-croisée" class="nav-link" data-scroll-target="#exercice-3-validation-croisée">Exercice 3 : Validation croisée</a></li>
   </ul>
 <div class="toc-actions"><ul><li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li><li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/tp/03-generalities-tp.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li></ul></div><div class="quarto-alternate-formats"><h2>Autres formats</h2><ul><li><a href="03-generalities-tp.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul></div></nav>
     </div>
@@ -620,6 +622,31 @@ window.Quarto = {
 <li><p>tableaux de fréquences pour les variables qualitatives;</p></li>
 <li><p>etc.</p></li>
 </ul>
+</section>
+<section id="exercice-2-compromis-biais-variance" class="level2">
+<h2 class="anchored" data-anchor-id="exercice-2-compromis-biais-variance">Exercice 2 : Compromis biais-variance</h2>
+<p>Dans cet exercice, on se propose d’illustrer le compromis biais-variance à l’aide de données simulées et d’un modèle de régression. On fait l’hypothèse que le vrai modèle de nos données est <span class="math display">\[f(x) = 3 + 8 x + 2 x^2.\]</span></p>
+<ol type="1">
+<li><p>Simuler un ensemble de données <span class="math inline">\((X, Y)\)</span> tel que <span class="math inline">\(Y = f(X) + \epsilon\)</span>, avec <span class="math inline">\(X \sim \mathcal{N}(0, 1)\)</span>, <span class="math inline">\(\epsilon \sim \mathcal{N}(0, \sigma^2)\)</span> et <span class="math inline">\(\sigma^2 = 5\)</span>.</p></li>
+<li><p>Ajuster un modèle linéaire de la forme <span class="math inline">\(Y = \beta_{0} + \beta_{1} X\)</span>. En R, la fonction standard est <code>lm</code>. En Python, vous pouvez utiliser la fonction <code>ols</code> du package <code>statsmodels</code>.</p></li>
+<li><p>Calculer <span class="math inline">\(\widehat{Y}\)</span> en utilisant <span class="math inline">\(X\)</span> généré à la question 1.</p></li>
+<li><p>Calculer l’erreur quadratique moyenne sur le jeu d’entraînement.</p></li>
+<li><p>Simuler un jeu de données de validation et calculer l’erreur quadratique moyenne, le biais et la variance du modèle sur ce jeu de validation.</p></li>
+<li><p>Refaire les questions 2 à 5, mais avec en ajustant un modèle linéaire avec un polynôme d’ordre 2.</p></li>
+<li><p>Refaire les questions 2 à 5, mais avec en ajustant un modèle linéaire avec un polynôme d’ordre 10.</p></li>
+<li><p>Conclure quant au compromis biais-variance et la complexité du modèle.</p></li>
+</ol>
+</section>
+<section id="exercice-3-validation-croisée" class="level2">
+<h2 class="anchored" data-anchor-id="exercice-3-validation-croisée">Exercice 3 : Validation croisée</h2>
+<p>En pratique, nous ne connaissons pas la vraie fonction <span class="math inline">\(f(x)\)</span>. Pour évaluer la qualité de notre modèle, on peut utiliser la validation croisée. Notez que le but de cet exercice est de faire votre propre code et non d’utiliser des fonctions déjà faites.</p>
+<ol type="1">
+<li><p>Simuler un jeu de données en utilisant le modèle de l’exercice 2.</p></li>
+<li><p>Faire une validation croisée avec <span class="math inline">\(K = 3\)</span> pour évaluer le modèle de régression linéaire simple (sans polynôme d’ordre supérieur) en utilisant l’erreur quadratique moyenne.</p></li>
+<li><p>Faire la même chose avec le modèle de régression linéaire avec un polynôme d’ordre 2.</p></li>
+<li><p>Faire la même chose avec le modèle de régression linéaire avec un polynôme d’ordre 10.</p></li>
+<li><p>Conclure quant à l’utilisation de la validation croisée.</p></li>
+</ol>
 
 
 </section>
