--- a/slides/03-generalities-distance-slides.html
+++ b/slides/03-generalities-distance-slides.html
@@ -244,24 +244,16 @@ Steven Golovkine
 <tbody>
 <tr class="odd">
 <td style="text-align: center;">Alice</td>
-<td style="text-align: center;">170</td>
-<td style="text-align: center;">69</td>
+<td style="text-align: center;">165</td>
+<td style="text-align: center;">70</td>
 </tr>
 <tr class="even">
 <td style="text-align: center;">Bob</td>
-<td style="text-align: center;">174</td>
-<td style="text-align: center;">72</td>
+<td style="text-align: center;">177</td>
+<td style="text-align: center;">75</td>
 </tr>
 </tbody>
 </table>
-<div class="fragment">
-<p>Distance euclidienne :</p>
-<p><span class="math display">\[d(\text{Alice}, \text{Bob}) = \sqrt{(170 - 174)^2 + (69 - 72)^2} = 5.\]</span></p>
-</div>
-<div class="fragment">
-<p>Distance de Manhattan :</p>
-<p><span class="math display">\[d(\text{Alice}, \text{Bob}) = |170 - 174| + |69 - 72| = 7.\]</span></p>
-</div>
 </section>
 <section id="problème-déchelle" class="slide level2">
 <h2>Problème d’échelle</h2>
@@ -374,7 +366,7 @@ Steven Golovkine
 <tr class="odd">
 <td style="text-align: center;">Alice</td>
 <td style="text-align: center;">Rouge</td>
-<td style="text-align: center;">Bleu</td>
+<td style="text-align: center;">Vert</td>
 <td style="text-align: center;">Blond</td>
 </tr>
 <tr class="even">
@@ -391,9 +383,6 @@ Steven Golovkine
 </tr>
 </tbody>
 </table>
-<div class="fragment">
-<p><span class="math display">\[d(\text{Alice}, \text{Bob}) = 1 + 0 + 1 = 2\]</span> <span class="math display">\[d(\text{Alice}, \text{Chris}) = 0 + 1 + 0 = 1\]</span> <span class="math display">\[d(\text{Bob}, \text{Chris}) = 1 + 1 + 1 = 3\]</span></p>
-</div>
 </section>
 <section id="similarité-par-accords" class="slide level2">
 <h2>Similarité par accords</h2>
@@ -471,7 +460,7 @@ Steven Golovkine
 <td style="text-align: center;">0</td>
 <td style="text-align: center;">1</td>
 <td style="text-align: center;">0</td>
-<td style="text-align: center;">0</td>
+<td style="text-align: center;">1</td>
 </tr>
 <tr class="even">
 <td style="text-align: center;">Bob</td>
@@ -483,13 +472,6 @@ Steven Golovkine
 </tr>
 </tbody>
 </table>
-<div class="fragment">
-<ul>
-<li><p><span class="math inline">\(M_{11} = 1\)</span>, <span class="math inline">\(M_{10} = 1\)</span>, <span class="math inline">\(M_{01} = 1\)</span>, <span class="math inline">\(M_{00} = 2\)</span></p></li>
-<li><p><span class="math inline">\(J(\text{Alice}, \text{Bob}) = \frac{1}{3}\)</span></p></li>
-<li><p><span class="math inline">\(d(\text{Alice}, \text{Bob}) = \frac{2}{3}\)</span></p></li>
-</ul>
-</div>
 </section>
 <section id="récapitulatif-des-distances" class="slide level2">
 <h2>Récapitulatif des distances</h2>
