deploy: 6cbf0a0f89dc23bdb8e1e6f5820f660721191cb1

--- a/slides/03-generalities-distance-slides.html
+++ b/slides/03-generalities-distance-slides.html
@@ -392,8 +392,8 @@ Steven Golovkine
 <div class="fragment">
 <p>Exemple précédent :</p>
 <ul>
-<li><p><span class="math inline">\(s(\text{Alice}, \text{Bob}) = \frac{1}{3}\)</span></p></li>
-<li><p><span class="math inline">\(s(\text{Alice}, \text{Chris}) = \frac{2}{3}\)</span></p></li>
+<li><p><span class="math inline">\(s(\text{Alice}, \text{Bob}) = 0\)</span></p></li>
+<li><p><span class="math inline">\(s(\text{Alice}, \text{Chris}) = 1\)</span></p></li>
 <li><p><span class="math inline">\(s(\text{Bob}, \text{Chris}) = 0\)</span></p></li>
 </ul>
 </div>
