--- a/td/04-dimension-td.html
+++ b/td/04-dimension-td.html
@@ -106,6 +106,7 @@ window.Quarto = {
 </script>
 
 <meta property="og:title" content="TD: Dimension – STT-2200: Analyse de données">
+<meta property="og:description" content="">
 <meta property="og:site_name" content="STT-2200: Analyse de données">
 </head>
 
@@ -560,8 +561,16 @@ window.Quarto = {
 <div id="quarto-sidebar-glass" class="quarto-sidebar-collapse-item" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item"></div>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        
-    <div class="quarto-alternate-formats"><h2>Autres formats</h2><ul><li><a href="04-dimension-td.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul></div></div>
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">Sur cette page</h2>
+   
+  <ul>
+  <li><a href="#exercice-1-compréhension-de-lacp" id="toc-exercice-1-compréhension-de-lacp" class="nav-link active" data-scroll-target="#exercice-1-compréhension-de-lacp">Exercice 1: Compréhension de l’ACP</a></li>
+  <li><a href="#exercice-2-matrice-de-covariance-et-de-corrélation" id="toc-exercice-2-matrice-de-covariance-et-de-corrélation" class="nav-link" data-scroll-target="#exercice-2-matrice-de-covariance-et-de-corrélation">Exercice 2: Matrice de covariance et de corrélation</a></li>
+  <li><a href="#exercice-3-pratique-de-lacp" id="toc-exercice-3-pratique-de-lacp" class="nav-link" data-scroll-target="#exercice-3-pratique-de-lacp">Exercice 3: Pratique de l’ACP</a></li>
+  </ul>
+<div class="toc-actions"><ul><li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li><li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/td/04-dimension-td.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li></ul></div><div class="quarto-alternate-formats"><h2>Autres formats</h2><ul><li><a href="04-dimension-td.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul></div></nav>
+    </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
@@ -585,8 +594,45 @@ window.Quarto = {
 </header>
 
 
+<section id="exercice-1-compréhension-de-lacp" class="level2">
+<h2 class="anchored" data-anchor-id="exercice-1-compréhension-de-lacp">Exercice 1: Compréhension de l’ACP</h2>
+<p>Soit le vecteur aléatoire <span class="math inline">\(X = (X_{1}, X_{2}, X_{3}, X_{4})^{\top}\)</span> dont l’espérance et la variance sont, respectivement, données par</p>
+<p><span class="math display">\[\mu = \begin{pmatrix}
+  0 \\ 1 \\ -1 \\ 0
+\end{pmatrix} \text{ et } \Sigma = \begin{pmatrix}
+  9 &amp;  1 &amp; -1 &amp; 2 \\
+  1 &amp;  4 &amp; -1 &amp; 1 \\
+-1 &amp; -1 &amp; 16 &amp; 0 \\
+  2 &amp;  1 &amp;  0 &amp; 9
+\end{pmatrix}.\]</span></p>
+<p>Les valeurs et vecteurs propres (normés) correspondants de <span class="math inline">\(\Sigma\)</span> sont</p>
+<p><span class="math display">\[\begin{align}
+\lambda_{1} &amp;= 16.27, \quad &amp; \alpha_1 &amp;= (0.165, 0.098, -0.980, 0.059)^{\top}, \\
+\lambda_{2} &amp;= 11.12, \quad &amp; \alpha_1 &amp;= (0.665, 0.169, 0.171, 0.707)^{\top}, \\
+\lambda_{3} &amp;= 6.95, \quad &amp; \alpha_1 &amp;= (0.718, -0.017, 0.077, -0.691)^{\top}, \\
+\lambda_{4} &amp;= 3.67, \quad &amp; \alpha_1 &amp;= (0.118, -0.981, -0.070, 0.139)^{\top}. \\
+\end{align}\]</span></p>
+<ol type="1">
+<li><p>Trouvez une combinaison linéaire de <span class="math inline">\(X_{1}, X_{2}, X_{3}\)</span> et <span class="math inline">\(X_{4}\)</span> dont la variance est <span class="math inline">\(6.95\)</span>.</p></li>
+<li><p>Soit <span class="math inline">\(Z = a_{0} + a_{1} X_{1} + a_{2} X_{2} + a_{3} X_{3} + a_{4} X_{4}\)</span>. Trouvez les valeurs de <span class="math inline">\(a_{0}, a_{1}, a_{2}, a_{3}, a_{4}\)</span> telles que <span class="math inline">\(Z\)</span> est de moyenne <span class="math inline">\(0\)</span> et de variance maximale. Quelle est la valeur de cette variance ? Quelle est la covariance entre cette combinaison linéaire et celle trouvée dans la question 1.</p></li>
+<li><p>Donnez une matrice diagonale <span class="math inline">\(M\)</span> telle que <span class="math inline">\(M \Sigma M = R\)</span>, où <span class="math inline">\(R\)</span> est la matrice des corrélations de <span class="math inline">\(X\)</span>.</p></li>
+</ol>
+</section>
+<section id="exercice-2-matrice-de-covariance-et-de-corrélation" class="level2">
+<h2 class="anchored" data-anchor-id="exercice-2-matrice-de-covariance-et-de-corrélation">Exercice 2: Matrice de covariance et de corrélation</h2>
+<p>Démontrer que la matrice de variance-covariance échantillonnnale des données centrées et réduites est égale à la matrice de corrélation échantillonnale des données initiales.</p>
+</section>
+<section id="exercice-3-pratique-de-lacp" class="level2">
+<h2 class="anchored" data-anchor-id="exercice-3-pratique-de-lacp">Exercice 3: Pratique de l’ACP</h2>
+<p>Soit un vecteur de trois variables aléatoires <span class="math inline">\(X = (X_{1}, X_{2}, X_{3})^{\top}\)</span> dont la matrice de variance est donnée par <span class="math inline">\(\mathrm{Var}(X) = \Sigma\)</span>. On vous dit que les valeurs propres de <span class="math inline">\(\Sigma\)</span> sont <span class="math inline">\(3, 2\)</span> et <span class="math inline">\(1\)</span> et que les vecteurs propres normés correspondants sont, respectivement, <span class="math inline">\(v_{1} = (0, - 1 / \sqrt{2}, 1 / \sqrt{2})^{\top}\)</span>, <span class="math inline">\(v_{2} = (1, 0, 0)^{\top}\)</span> et <span class="math inline">\(v_{3} = (0, 1 / \sqrt{2}, 1 / \sqrt{2})^{\top}\)</span>.</p>
+<ol type="1">
+<li><p>En fait, <span class="math inline">\(X_{1}, X_{2}\)</span> et <span class="math inline">\(X_{3}\)</span> représentent, respectivement, la circonférence du poignet droit, un score de capacité pulmonaire et l’indice de masse corporelle des individus d’une certaine population. Les médecins aimeraient résumer ces trois mesures en un seul score, noté <span class="math inline">\(C\)</span>, qui est une combinaison linéaire des trois variables originales, i.e.&nbsp;<span class="math inline">\(C = c_{1} X_{1} + c_{2} X_{2} + c_{3} X_{3}\)</span> pour des nombres réels <span class="math inline">\(c_{1}, c_{2}\)</span> et <span class="math inline">\(c_{3}\)</span>) et qui capture le plus de variabilité possible. Trouvez les valeurs de <span class="math inline">\(c_{1}, c_{2}\)</span> et <span class="math inline">\(c_{3}\)</span> telles que <span class="math inline">\(\sum_{j = 1}^{3} c_j^2 = 1\)</span> et que la variance de <span class="math inline">\(C\)</span> sera maximale. Quelle est la valeur de cette variance maximale ?</p></li>
+<li><p>Quelle proportion de la variabilité totale de <span class="math inline">\(X_{1}, X_{2}\)</span> et <span class="math inline">\(X_{3}\)</span> est capturée par <span class="math inline">\(C\)</span> ?</p></li>
+<li><p>Retrouvez la matrice <span class="math inline">\(\Sigma\)</span> à partir des informations données dans l’énoncé de la question.</p></li>
+</ol>
 
 
+</section>
 
 </main> <!-- /main -->
 <script>
@@ -1221,7 +1267,7 @@ window.onload = function() {
     </div>   
     <div class="nav-footer-center">
 <p>2025 | <strong>Steven Golovkine</strong> | <a class="link-footer" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a></p>
-<div class="toc-actions"><ul><li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li><li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/td/04-dimension-td.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li></ul></div></div>
+<div class="toc-actions d-sm-block d-md-none"><ul><li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li><li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/td/04-dimension-td.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li></ul></div></div>
     <div class="nav-footer-right">
       &nbsp;
     </div>
