deploy: f02c43d81cb91f3af987fbd7e336a536b657e991

--- a/tp/04-dimension-tp.html
+++ b/tp/04-dimension-tp.html
@@ -561,8 +561,14 @@ window.Quarto = {
 <div id="quarto-sidebar-glass" class="quarto-sidebar-collapse-item" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item"></div>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        
-    <div class="quarto-alternate-formats"><h2>Autres formats</h2><ul><li><a href="04-dimension-tp.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul></div></div>
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">Sur cette page</h2>
+   
+  <ul>
+  <li><a href="#exercice-1-des-coquillages" id="toc-exercice-1-des-coquillages" class="nav-link active" data-scroll-target="#exercice-1-des-coquillages">Exercice 1: Des coquillages</a></li>
+  </ul>
+<div class="toc-actions"><ul><li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li><li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/tp/04-dimension-tp.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li></ul></div><div class="quarto-alternate-formats"><h2>Autres formats</h2><ul><li><a href="04-dimension-tp.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul></div></nav>
+    </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
@@ -587,8 +593,22 @@ window.Quarto = {
 
 
 <p>Vous pouvez faire les exercices dans le langage de votre choix.</p>
+<section id="exercice-1-des-coquillages" class="level2">
+<h2 class="anchored" data-anchor-id="exercice-1-des-coquillages">Exercice 1: Des coquillages</h2>
+<p>Dans cette exercice, on se propose de faire une analyse de données de coquillages. Pour cela, on a accès à 7 mesures physiques des coquillages, ainsi que leur genre et leur âge.</p>
+<ol type="1">
+<li><p>Télécharger le jeu de données suivant: <a href="../include/data/tp/abalone.csv">lien</a>. Des informations sur le jeu de données sont disponibles <a href="https://www.kaggle.com/datasets/farkhod77/abalone-age-predict">ici</a>.</p></li>
+<li><p>Faire une rapide analyse descriptive des données.</p></li>
+<li><p>Faire une analyse en composantes principales.</p></li>
+<li><p>Combien gardez-vous d’axes factoriels en fonction des différentes règles vu en cours ?</p></li>
+<li><p>Quelles sont les deux variables qui contribuent le plus à la deuxième dimension ? Et quelles sont les deux observations qui contribuent le plus à la troisième dimension ?</p></li>
+<li><p>Comment interprétez la première dimension ?</p></li>
+<li><p>Quelle est le pourcentage de la variabilité expliquée par les trois premiers axes factoriels ?</p></li>
+<li><p>Dans ce contexte, était-il pertinent de standardiser les données pour faire l’analyse en composantes principales ? Justifiez.</p></li>
+</ol>
 
 
+</section>
 
 </main> <!-- /main -->
 <script>
@@ -1223,7 +1243,7 @@ window.onload = function() {
     </div>   
     <div class="nav-footer-center">
 <p>2025 | <strong>Steven Golovkine</strong> | <a class="link-footer" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a></p>
-<div class="toc-actions"><ul><li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li><li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/tp/04-dimension-tp.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li></ul></div></div>
+<div class="toc-actions d-sm-block d-md-none"><ul><li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li><li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/tp/04-dimension-tp.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li></ul></div></div>
     <div class="nav-footer-right">
       &nbsp;
     </div>
