deploy: 73af7b48ee154facea59444f14037c96927dc7cc

--- a/en/contents/generalities/05-model-evaluation.html
+++ b/en/contents/generalities/05-model-evaluation.html
@@ -867,7 +867,7 @@ Figure 1: Diagram of the validation set approach.
 <span id="cb4-359"><a href="#cb4-359" aria-hidden="true" tabindex="-1"></a>})</span></code></pre></div>
 <button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button>
 </div>
-</details><div id="fig-trainval-html" class="cell quarto-float quarto-figure quarto-figure-center anchored" data-warning="false" data-eval="true">
+</details><div id="fig-trainval-html" class="cell quarto-float quarto-figure quarto-figure-center anchored" data-eval="true" data-warning="false">
 <figure class="quarto-float quarto-float-fig figure"><div aria-describedby="fig-trainval-html-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="cell-output cell-output-display">
 <div id="fig-trainval-html-1" class="quarto-float quarto-figure quarto-figure-center anchored">
