--- a/tp/04-dimension-tp.html
+++ b/tp/04-dimension-tp.html
@@ -566,6 +566,8 @@ window.Quarto = {
    
   <ul>
   <li><a href="#exercice-1-des-coquillages" id="toc-exercice-1-des-coquillages" class="nav-link active" data-scroll-target="#exercice-1-des-coquillages">Exercice 1: Des coquillages</a></li>
+  <li><a href="#exercice-2-écoute-radio-au-canada" id="toc-exercice-2-écoute-radio-au-canada" class="nav-link" data-scroll-target="#exercice-2-écoute-radio-au-canada">Exercice 2: Écoute radio au Canada</a></li>
+  <li><a href="#exercice-3-le-café" id="toc-exercice-3-le-café" class="nav-link" data-scroll-target="#exercice-3-le-café">Exercice 3: Le café</a></li>
   </ul>
 <div class="toc-actions"><ul><li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li><li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/tp/04-dimension-tp.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li></ul></div><div class="quarto-alternate-formats"><h2>Autres formats</h2><ul><li><a href="04-dimension-tp.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul></div></nav>
     </div>
@@ -595,7 +597,7 @@ window.Quarto = {
 <p>Vous pouvez faire les exercices dans le langage de votre choix.</p>
 <section id="exercice-1-des-coquillages" class="level2">
 <h2 class="anchored" data-anchor-id="exercice-1-des-coquillages">Exercice 1: Des coquillages</h2>
-<p>Dans cette exercice, on se propose de faire une analyse de données de coquillages. Pour cela, on a accès à 7 mesures physiques des coquillages, ainsi que leur genre et leur âge.</p>
+<p>Dans cet exercice, on se propose de faire une analyse de données de coquillages. Pour cela, on a accès à 7 mesures physiques des coquillages, ainsi que leur genre et leur âge.</p>
 <ol type="1">
 <li><p>Télécharger le jeu de données suivant: <a href="../include/data/tp/abalone.csv">lien</a>. Des informations sur le jeu de données sont disponibles <a href="https://www.kaggle.com/datasets/farkhod77/abalone-age-predict">ici</a>.</p></li>
 <li><p>Faire une rapide analyse descriptive des données.</p></li>
@@ -605,6 +607,27 @@ window.Quarto = {
 <li><p>Comment interprétez la première dimension ?</p></li>
 <li><p>Quelle est le pourcentage de la variabilité expliquée par les trois premiers axes factoriels ?</p></li>
 <li><p>Dans ce contexte, était-il pertinent de standardiser les données pour faire l’analyse en composantes principales ? Justifiez.</p></li>
+</ol>
+</section>
+<section id="exercice-2-écoute-radio-au-canada" class="level2">
+<h2 class="anchored" data-anchor-id="exercice-2-écoute-radio-au-canada">Exercice 2: Écoute radio au Canada</h2>
+<p>Dans cet exercice, on cherche à savoir si certains types de radio sont préférés par des adoslescents, des hommes ou bien des femmes.</p>
+<ol type="1">
+<li><p>Télécharger le jeu de données suivant: <a href="../include/data/tp/radio.csv">lien</a>. Ces données sont tirés de Statistique Canada et correspondent aux types de radio écoutées par les adoslescents, les hommes et les femmes adultes au Canada.</p></li>
+<li><p>Faire une analyse factorielle des correspondances.</p></li>
+<li><p>Interpréter le premier axe factoriel.</p></li>
+<li><p>Quelle est la qualité de représentation des adoslescents, des hommes et des femmes adultes. Expliquer.</p></li>
+</ol>
+</section>
+<section id="exercice-3-le-café" class="level2">
+<h2 class="anchored" data-anchor-id="exercice-3-le-café">Exercice 3: Le café</h2>
+<p>Dans cet exercice, on s’intéresse à la relation entre le type de café commandé et la période de la journée.</p>
+<ol type="1">
+<li><p>Télécharger le jeu de données suivant: <a href="../include/data/tp/coffee_sales.csv">lien</a>.</p></li>
+<li><p>Construire la tableau des fréquences relatives croisant Types de café et Période de la journée.</p></li>
+<li><p>Faire une analyse factorielle des correspondances de ce tableau de fréquences.</p></li>
+<li><p>Interpréter les axes factoriels.</p></li>
+<li><p>Les deux variables sont-elles indépendantes ? Justifier.</p></li>
 </ol>
 
 
