deploy: 23af7dc0869b7cbba758101ea590102238b4fb5a

--- a/td/04-dimension-td.html
+++ b/td/04-dimension-td.html
@@ -569,6 +569,7 @@ window.Quarto = {
   <li><a href="#exercice-2-matrice-de-covariance-et-de-corrélation" id="toc-exercice-2-matrice-de-covariance-et-de-corrélation" class="nav-link" data-scroll-target="#exercice-2-matrice-de-covariance-et-de-corrélation">Exercice 2: Matrice de covariance et de corrélation</a></li>
   <li><a href="#exercice-3-pratique-de-lacp" id="toc-exercice-3-pratique-de-lacp" class="nav-link" data-scroll-target="#exercice-3-pratique-de-lacp">Exercice 3: Pratique de l’ACP</a></li>
   <li><a href="#exercice-4-taux-de-survie-de-patients" id="toc-exercice-4-taux-de-survie-de-patients" class="nav-link" data-scroll-target="#exercice-4-taux-de-survie-de-patients">Exercice 4: Taux de survie de patients</a></li>
+  <li><a href="#exercice-5-théorie-de-lacm" id="toc-exercice-5-théorie-de-lacm" class="nav-link" data-scroll-target="#exercice-5-théorie-de-lacm">Exercice 5: Théorie de l’ACM</a></li>
   </ul>
 <div class="toc-actions"><ul><li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li><li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/td/04-dimension-td.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li></ul></div><div class="quarto-alternate-formats"><h2>Autres formats</h2><ul><li><a href="04-dimension-td.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul></div></nav>
     </div>
@@ -677,6 +678,55 @@ window.Quarto = {
 <li><p>Combien d’axes obtient-on en effectuant l’analyse donnée en question 1 ? Justifier.</p></li>
 <li><p>Quel test vous permet de détecter une éventuelle indépendance entre l’issue observée et la présence ou l’absence de troubles cognitifs en phase initiale ? Sachant que l’inertie totale du nuage est égale à 0.0050, donner la valeur de la statistique du test correspondant.</p></li>
 </ol>
+</section>
+<section id="exercice-5-théorie-de-lacm" class="level2">
+<h2 class="anchored" data-anchor-id="exercice-5-théorie-de-lacm">Exercice 5: Théorie de l’ACM</h2>
+<ol type="1">
+<li>Parmi les tableaux suivants, quels sont ceux qui peuvent être étudiés par une ACM ? Justifier.</li>
+</ol>
+<ul>
+<li><p>Un tableau issu d’une enquête où toutes les questions engendrent des réponses qualitatives.</p></li>
+<li><p>Un tableau où les individus réponsent pour chaque question par “trop peu”, “peu”, “assez”, “trop”, “beaucoup trop”.</p></li>
+<li><p>Un tableau dans lequel on dénombre le nombre de personnes ayant répondu à deux questions particulières.</p></li>
+<li><p>Un tableau contenant diverses caractéristiques d’individus (taille, poids, couleur des yeux, couleur des cheveux, etc.).</p></li>
+</ul>
+<ol start="2" type="1">
+<li>Quels sont les énoncés vrais dans le cadre de l’ACM ? Justifier.</li>
+</ol>
+<ul>
+<li><p>La tableau de données brut contient autant de colonnes que de variables.</p></li>
+<li><p>Le tableau disjonctif complet contient autant de colonnes que de variables.</p></li>
+<li><p>Le tableau de Burt contient autant de colonnes que de variables.</p></li>
+<li><p>Le tableau disjonctif complet contient autant de colonnes que de modalités (toutes variables confondues).</p></li>
+</ul>
+<ol start="3" type="1">
+<li>Quels sont les énoncés vrais dans le cadre de l’ACM ? Justifier. La distance entre deux points représentant les individus <span class="math inline">\(i\)</span> et <span class="math inline">\(j\)</span> est</li>
+</ol>
+<ul>
+<li><p>d’autant plus petite que ces deux individus prennent à peu près les mêmes modalités.</p></li>
+<li><p>d’autant plus grande que les individus prennent des modalités différentes.</p></li>
+<li><p>d’autant plus grande que les individus prennent des modalités différentes et que ces modalités sont fréquentes.</p></li>
+<li><p>d’autant plus grande que les individus prennent des modalités différentes et que ces modalités sont rares.</p></li>
+</ul>
+<ol start="4" type="1">
+<li>Quels sont les énoncés vrais dans le cadre de l’ACM ? Justifier.</li>
+</ol>
+<ul>
+<li><p>La distance entre deux points représentant les modalités <span class="math inline">\(k\)</span> et <span class="math inline">\(l\)</span> est d’autant plus petite que ces deux modalités ont en commun un grand nombre d’individus.</p></li>
+<li><p>La distance entre deux points représentant les modalités <span class="math inline">\(k\)</span> et <span class="math inline">\(l\)</span> est d’autant plus grande que ces deux modalités sont rares.</p></li>
+<li><p>La distance entre deux modalités ayant de gros effectifs est nécessairement grande.</p></li>
+<li><p>La distance entre deux modalités rares est nécessairement grande.</p></li>
+</ul>
+<ol start="5" type="1">
+<li>Quels sont les énoncés vrais dans le cadre de l’ACM ? Justifier.</li>
+</ol>
+<ul>
+<li><p>Le graphe biplot fournit une représentation optimale du nuage des individus.</p></li>
+<li><p>Le graphe biplot fournit une représentation optimale du nuage des modalités.</p></li>
+<li><p>Si un individu est proche d’une modalité alors il prend cette modalité.</p></li>
+<li><p>Un individu est du côté des modalités qu’il a choisi.</p></li>
+<li><p>Une modalité est du côté des individus qui ont choisi cette modalité.</p></li>
+</ul>
 
 
 </section>
