--- a/tp/04-dimension-tp.html
+++ b/tp/04-dimension-tp.html
@@ -568,6 +568,7 @@ window.Quarto = {
   <li><a href="#exercice-1-des-coquillages" id="toc-exercice-1-des-coquillages" class="nav-link active" data-scroll-target="#exercice-1-des-coquillages">Exercice 1: Des coquillages</a></li>
   <li><a href="#exercice-2-écoute-radio-au-canada" id="toc-exercice-2-écoute-radio-au-canada" class="nav-link" data-scroll-target="#exercice-2-écoute-radio-au-canada">Exercice 2: Écoute radio au Canada</a></li>
   <li><a href="#exercice-3-le-café" id="toc-exercice-3-le-café" class="nav-link" data-scroll-target="#exercice-3-le-café">Exercice 3: Le café</a></li>
+  <li><a href="#exercice-4-dépression-post-partum" id="toc-exercice-4-dépression-post-partum" class="nav-link" data-scroll-target="#exercice-4-dépression-post-partum">Exercice 4: Dépression post-partum</a></li>
   </ul>
 <div class="toc-actions"><ul><li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li><li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/tp/04-dimension-tp.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li></ul></div><div class="quarto-alternate-formats"><h2>Autres formats</h2><ul><li><a href="04-dimension-tp.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul></div></nav>
     </div>
@@ -628,6 +629,18 @@ window.Quarto = {
 <li><p>Faire une analyse factorielle des correspondances de ce tableau de fréquences.</p></li>
 <li><p>Interpréter les axes factoriels.</p></li>
 <li><p>Les deux variables sont-elles indépendantes ? Justifier.</p></li>
+</ol>
+</section>
+<section id="exercice-4-dépression-post-partum" class="level2">
+<h2 class="anchored" data-anchor-id="exercice-4-dépression-post-partum">Exercice 4: Dépression post-partum</h2>
+<p>Dans cet exercice, on s’intéresse à l’analyse d’un questionnaire sur la dépression post-partum après l’accouchement.</p>
+<ol type="1">
+<li><p>Télécharger le jeu de données suivant: <a href="../include/data/tp/postpartum_data.csv">lien</a>. Des informations sur le jeu de données sont disponibles <a href="https://www.kaggle.com/datasets/parvezalmuqtadir2348/postpartum-depression">ici</a>.</p></li>
+<li><p>Constuire le tableau disjonctif complet de ce jeu de données.</p></li>
+<li><p>Construire le tableau de Burt de ce jeu de données.</p></li>
+<li><p>Faire une analyse des correspondances multiples sur le tableau disjonctif complet. Vérifier que les résultats sont cohérents avec ue ACM faites sur le tableau de Burt.</p></li>
+<li><p>Interpréter les axes factoriels.</p></li>
+<li><p>Quelles associations pouvez-vous faire à l’aide des résultats de l’ACM ?</p></li>
 </ol>
 
 
