deploy: d38b6cca49bcc9586acf5c8417aa3b088760f963

--- a/slides/07-ethics-slides.html
+++ b/slides/07-ethics-slides.html
@@ -459,8 +459,9 @@ Steven Golovkine
 <p><br></p>
 <p>Protection juridique croissante :</p>
 <ul>
-<li><p>RGPD (Europe) → Droit à l’explication</p></li>
-<li><p>AI Act (UE) → Classification des risques</p></li>
+<li><p>RGPD (UE) → Droit à l’explication</p></li>
+<li><p>AI Act (UE) → Cadre réglementaire et juridique commun pour l’IA</p></li>
+<li><p>LIAD (Canada) → Protection des consommateurs</p></li>
 <li><p>Algorithmic Accountability Act (USA) → Audits obligatoires</p></li>
 <li><p>Législations nationales en développement</p></li>
 </ul>
